plugins {
    id 'java'
    id 'application'
}

repositories {
    jcenter()
}
sourceCompatibility = JavaVersion.VERSION_12
targetCompatibility = JavaVersion.VERSION_12

dependencies {
}

mainClassName = 'appcds.App'

jar {
    manifest {
        attributes(
                'Main-Class': mainClassName
        )
    }
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

run { jvmArgs(['--enable-preview']) }